--- a/frontend/src/app/page.module.css
+++ b/frontend/src/app/page.module.css
@@ -1,22 +1,78 @@
 .main {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   align-items: center;
-  padding: 6rem;
-  min-height: 100vh;
+  justify-content: center;
+  height: 100vh;
+  background-color: #140a30;
+  padding: 20px;
 }
 
 .description {
-  display: inherit;
-  justify-content: inherit;
-  align-items: inherit;
-  font-size: 0.85rem;
-  max-width: var(--max-width);
-  width: 100%;
-  z-index: 2;
-  font-family: var(--font-mono);
+  text-align: center;
+  margin-bottom: 20px;
 }
+
+.signupContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height:100%;
+  max-height: 600px;
+  max-width: 600px;
+}
+
+.signupForm {
+  background-color: #000000;
+  padding: 30px;
+  border-radius: 15px; /* Rounded corners */
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  width: 100%;
+}
+
+.signupForm h2 {
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+.formGroup {
+  margin-bottom: 20px;
+}
+
+.formGroup label {
+  display: block;
+  margin-bottom: 5px;
+}
+
+.formGroup input {
+  width: calc(100% - 20px);
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+}
+
+.signupButton {
+  width: 100%;
+  padding: 10px;
+  background-color: #007bff;
+  color: #000000;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-top: 10px;
+}
+
+.signupButton:hover {
+  background-color: #0056b3;
+}
+
+
+/* 
+this starts next.js css that came with project
+*/
+
+
 
 .description a {
   display: flex;
@@ -73,12 +129,17 @@
   text-wrap: balance;
 }
 
+.padding {
+  padding: 100 px;
+}
 .center {
   display: flex;
   justify-content: center;
   align-items: center;
-  position: relative;
-  padding: 4rem 0;
+  position:relative;
+  background-color: blue;
+  border-radius: 20px;
+  
 }
 
 .center::before {
