--- a/frontend/src/app/page.module.css
+++ b/frontend/src/app/page.module.css
@@ -4,7 +4,7 @@
   align-items: center;
   justify-content: center;
   height: 100vh;
-  background-color: #140a30;
+  background-color: #3877c0;
   padding: 20px;
 }
 
@@ -24,10 +24,10 @@
 }
 
 .signupForm {
-  background-color: #000000;
+  background-color: #3877c0;
   padding: 30px;
   border-radius: 15px; /* Rounded corners */
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.9);
   width: 100%;
 }
 
@@ -53,9 +53,10 @@
 }
 
 .signupButton {
-  width: 100%;
+  width: 50%;
+  justify-self: center;
   padding: 10px;
-  background-color: #007bff;
+  background-color: #e6e6e6;
   color: #000000;
   border: none;
   border-radius: 5px;
