--- a/frontend/src/app/page.module.css
+++ b/frontend/src/app/page.module.css
@@ -4,8 +4,12 @@
   align-items: center;
   justify-content: center;
   height: 100vh;
-  background-color: #3877c0;
+  background-color: #040101;
   padding: 20px;
+}
+
+.title {
+  font-family:sans-serif;
 }
 
 .description {
@@ -24,10 +28,10 @@
 }
 
 .signupForm {
-  background-color: #3877c0;
+  background-color: #000000;
   padding: 30px;
   border-radius: 15px; /* Rounded corners */
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.9);
+  box-shadow: 0 2px 10px rgba(255, 255, 255, 0.9);
   width: 100%;
 }
 
@@ -37,7 +41,7 @@
 }
 
 .formGroup {
-  margin-bottom: 20px;
+  margin-bottom: 10px;
 }
 
 .formGroup label {
@@ -48,7 +52,7 @@
 .formGroup input {
   width: calc(100% - 20px);
   padding: 10px;
-  border-radius: 5px;
+  border-radius: 10px;
   border: 1px solid #ccc;
 }
 
@@ -56,8 +60,9 @@
   width: 50%;
   justify-self: center;
   padding: 10px;
-  background-color: #e6e6e6;
-  color: #000000;
+  background-color: #000000;
+  color: #ffffff;
+  box-shadow: 0 2px 10px rgba(255, 255, 255, 0.9);
   border: none;
   border-radius: 5px;
   cursor: pointer;
@@ -65,7 +70,7 @@
 }
 
 .signupButton:hover {
-  background-color: #0056b3;
+  background-color: #fafafa;
 }
 
 
@@ -77,9 +82,8 @@ this starts next.js css that came with project
 
 .description a {
   display: flex;
-  justify-content: center;
-  align-items: center;
   gap: 0.5rem;
+
 }
 
 .description p {
