--- a/frontend/src/app/page.module.css
+++ b/frontend/src/app/page.module.css
@@ -5,11 +5,15 @@
   justify-content: center;
   height: 100vh;
   background-color: #040101;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
   padding: 20px;
 }
 
 .title {
   font-family:sans-serif;
+  text-align: left;
 }
 
 .description {
@@ -27,12 +31,14 @@
   max-width: 600px;
 }
 
+
 .signupForm {
   background-color: #000000;
-  padding: 30px;
+  padding: 50px;
   border-radius: 15px; /* Rounded corners */
-  box-shadow: 0 2px 10px rgba(255, 255, 255, 0.9);
   width: 100%;
+  box-shadow: 0 10px 100px rgba(255, 255, 255, 0.5);
+
 }
 
 .signupForm h2 {
@@ -47,12 +53,14 @@
 .formGroup label {
   display: block;
   margin-bottom: 5px;
+  font-weight: 600;
+  margin-bottom: 0.7rem;
 }
 
 .formGroup input {
   width: calc(100% - 20px);
   padding: 10px;
-  border-radius: 10px;
+  
   border: 1px solid #ccc;
 }
 
@@ -64,15 +72,33 @@
   color: #ffffff;
   box-shadow: 0 2px 10px rgba(255, 255, 255, 0.9);
   border: none;
-  border-radius: 5px;
+  
   cursor: pointer;
   margin-top: 10px;
+  font-weight: 600;
+  margin-bottom: 0.7rem;
 }
 
 .signupButton:hover {
   background-color: #fafafa;
 }
 
+.grid {
+  display: grid;
+  grid-template-columns: repeat(4, minmax(25%, auto));
+  max-width: 100%;
+  width: var(--max-width);
+  justify-content: center;
+  
+}
+
+.card {
+  padding: 1rem 1.2rem;
+  border-radius: var(--border-radius);
+  background: rgba(var(--card-rgb), 0);
+  border: 1px solid rgba(var(--card-border-rgb), 0);
+  transition: background 200ms, border 200ms;
+}
 
 /* 
 this starts next.js css that came with project
@@ -100,20 +126,7 @@ this starts next.js css that came with project
   font-family: var(--font-mono);
 }
 
-.grid {
-  display: grid;
-  grid-template-columns: repeat(4, minmax(25%, auto));
-  max-width: 100%;
-  width: var(--max-width);
-}
 
-.card {
-  padding: 1rem 1.2rem;
-  border-radius: var(--border-radius);
-  background: rgba(var(--card-rgb), 0);
-  border: 1px solid rgba(var(--card-border-rgb), 0);
-  transition: background 200ms, border 200ms;
-}
 
 .card span {
   display: inline-block;
