--- a/frontend/src/app/page.module.css
+++ b/frontend/src/app/page.module.css
@@ -34,10 +34,11 @@
 
 .signupForm {
   background-color: #000000;
-  padding: 50px;
-  border-radius: 15px; /* Rounded corners */
+  padding: 60px;
+  border-radius: 0px; /* Rounded corners */
   width: 100%;
   box-shadow: 0 10px 100px rgba(255, 255, 255, 0.5);
+  border-color: #fafafa;
 
 }
 
@@ -94,7 +95,7 @@
 
 .card {
   padding: 1rem 1.2rem;
-  border-radius: var(--border-radius);
+  border-radius: 0px;
   background: rgba(var(--card-rgb), 0);
   border: 1px solid rgba(var(--card-border-rgb), 0);
   transition: background 200ms, border 200ms;
